# routed-memory-experts

./: README.md  pyproject.toml
adapters/: gsm8k_math_manifest.json  vllm_metal_manifest.json
docs/: ADAPTER_CANDIDATES.md  COMPLETION_IMPLEMENTATION_PLAN.md  EXTERNAL_PROOF_RUNBOOK.md  FULL_PROOF_PHASED_PLAN.md  IMPLEMENTATION_PLAN.md  KAGGLE_CUDA_VLLM_PROOF.md  LOOP.md  PUBLIC_BENCHMARK_CONTRACT.md  THESIS_PROGRESS.md
experts/: finance.json  general.json  kubernetes.json  math.json  medical-literature.json  python.json  security.json
paper/: routed-memory-experts.md
runs/: benchmark-proof.json  cuda-vllm-base-vs-tldr.json  cuda-vllm-concurrency.json  cuda-vllm-gsm8k-concurrency.json  cuda-vllm-gsm8k-math-proof.json  cuda-vllm-gsm8k-models.json  cuda-vllm-gsm8k-public-openai-benchmark.json  cuda-vllm-models.json  cuda-vllm-pts-proof.json  cuda-vllm-tldr-proof.json  fleet.json  local-vllm-gsm8k-public-openai-benchmark.json  ollama-proof.json  proof-gap-ledger.json  proof.json  router-comparison.json  runtime-readiness.json  vllm-metal-base-vs-lora.json  vllm-metal-concurrency.json  vllm-metal-lora-proof.json  vllm-metal-manifest-concurrency.json  vllm-metal-manifest-proof.json  vllm-metal-models.json  vllm-metal-multi-lora-models.json  vllm-metal-multi-lora-proof.json  vllm-metal-proof.json  vllm-metal-pts-lora-proof.json
scripts/: build-gsm8k-public-workload.py  install-vllm-metal.sh  kaggle_cuda_gsm8k_vllm_public_benchmark.py  kaggle_cuda_vllm_proof.py  run-local-proofs.sh  run-local-vllm-gsm8k-direct.py  run-openai-public-benchmark.sh  start-vllm-metal-gsm8k.sh  (+2 more)
(+38 files in other folders)
