[project]
name = "routed-memory-experts"
version = "0.1.0"
description = "Proof-oriented research and implementation of routed memory-hierarchy expert AI systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
rme = "routed_memory_experts.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
